crates/solidity/testing/snapshots/bindings_output/control/try_catch/generated/v2/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or AssemblyKeyword or BoolKeyword or BreakKeyword or ByteKeyword or BytesKeyword or CloseBrace or ContinueKeyword or DecimalLiteral or DoKeyword or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or ForKeyword or FunctionKeyword or HexLiteral or Identifier or IfKeyword or IntKeyword or MappingKeyword or NewKeyword or OpenBrace or OpenBracket or OpenParen or ReturnKeyword or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or ThrowKeyword or TrueKeyword or UfixedKeyword or UintKeyword or VarKeyword or WhileKeyword.
    ╭─[input.sol:5:9]
    │
  5 │ ╭─▶         try new Foo() {
    ┆ ┆   
 11 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯

------------------------------------------------------------------------

Definitions (3):
- Def: #1 ["Foo" @ input.sol:1:10] (contract)
- Def: #2 ["Test" @ input.sol:3:10] (contract)
- Def: #3 ["test" @ input.sol:4:14] (function, type: function () returns void)

------------------------------------------------------------------------

References (0):

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Foo {}
   │          ─┬─  
   │           ╰─── name: 1
   │ 
 3 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 2
 4 │     function test() public {
   │              ──┬─  
   │                ╰─── name: 3
───╯
